--- a/backend/package.json
+++ b/backend/package.json
@@ -40,14 +40,21 @@
     "express": "~4.16.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.2",
+    "helmet": "^4.2.0",
+    "html-to-text": "^7.1.1",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.4",
     "mongoose-autopopulate": "^0.16.1",
     "morgan": "~1.9.1",
+    "nanoid": "^3.1.20",
+    "nodemailer": "^6.5.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "rate-limiter-flexible": "^2.2.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
