--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
