--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,11 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.2.6",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.3.0",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.7.1",
     "vite": "^3.0.9"
   },
