Add dinner controller, services and routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,6 @@
 		"xabikos"
 	],
 	"typescript.suggest.paths": false,
-	"javascript.suggest.paths": false,
+	"javascript.suggest.paths": true,
 	"rest-client.previewResponseInUntitledDocument": true
 }
